fixed scroll issue with static gap

--- a/src/components/styles/style.module.scss
+++ b/src/components/styles/style.module.scss
@@ -12,7 +12,7 @@
       line-height: var(--lh-title);
       font-weight: var(--fw-bold);
    }
-   &_buttons {
+   &_controls {
       flex: 0 1 560px;
       display: flex;
       align-items: center;
@@ -23,12 +23,14 @@
       height: 1px;
       background-color: var(--color-secondary);
       position: relative;
+      overflow: hidden;
       &__active{
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          background-color: var(--color-main);
+         transition: left ease 0.2s;
       }
    }
    &_button {
@@ -54,10 +56,11 @@
    }
    &_body {
       display: flex;
-      column-gap: 40px;
+      margin: 0 -20px;
       transition: transform ease 0.2s;
    }
    &_item {
+      margin: 0 20px;
       max-width: 260px;
       padding: 20px 20px 22px 20px;
       display: flex;
